--- a/HTML/create-account.html
+++ b/HTML/create-account.html
@@ -25,30 +25,45 @@
   <!-- Add your site or application content here -->
   
   <header>
-    
-  </header>
-  <main>
-    <div class="main-content">
-      <div class="nav">
+    <div class="nav">
         <div class="navigation">
           <a href="index.html">Home</a>
           <img src="img/FIFA-logo.png" alt="FIFA-logo">
           <a href="login.html">Login</a>
       </div>
     </div>
-
-      <div class="title">
-          <h1>Welkom op FIFA project</h1>
-          <h2>Bekijk hieronder de schema's</h2>
-          <button onclick="window.location.href = '#about';">Schema's</button>
+  </header>
+  <main>
+    <div class="main-form">
+      <div class="create-form-background">
+        <div class="title-form">
+          <h3>Registreren</h3>
+        </div>
+        <form id="create-account-form" action="../api/create-account.php" method="post">
+        <label for="name">Gebruikersnaam</label>
+        <input type="text" name="username" required="">
+        <label for="players">Email</label>
+        <input type="text" name="email" required="">
+        <label for="players">Wachtwoord</label>
+        <input type="text" name="password" required="">
+        <input id="submit-team" type="submit" value="Registreren">
+      </form>
       </div>
-
-
+       <div class="create-form-background">
+        <div class="title-form">
+          <h3>Inloggen</h3>
+        </div>
+        <form id="login-account-form" action="../api/login-account.php" method="post">
+        <label for="name">Gebruikersnaam</label>
+        <input type="text" name="username" required="">
+        <label for="players">Wachtwoord</label>
+        <input type="password" name="password" required="">
+        <input id="submit-team" type="submit" value="Inloggen">
+      </form>
+      </div>
     </div>
-    <div class="bar"></div>
   </main>
   <footer>
-    
   </footer>
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
